Fixed alignment issues

--- a/css/hotelComparison.css
+++ b/css/hotelComparison.css
@@ -130,10 +130,10 @@ th > select {
   }
 
   #hotelInfo {
-    height: 0.8in;
+    height: 0.85in;
   }
 
   td {
-    height: 1.25in;
+    height: 1.3in;
   }
 }
