--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -92,7 +92,7 @@
   }
 
   .appLinkContainer {
-    height: 1.25in;
+    height: 1.3in;
   }
 
   #logo > img {
